// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filterParamsが更新された時、fetchが走り記事を取得する 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "https://nits-tips.microcms.io/api/v1/blogs?orders=-updatedAt&limit=100&filters=isHidden%5Bnot_equals%5Dtrue%5Band%5Dcategory%5Bequals%5DtestCategory%5Band%5Dtags%5Bcontains%5DtestTag%5Band%5Dtags%5Bcontains%5DtestTag2",
      {
        "headers": Headers {
          Symbol(entries): {
            "x-microcms-api-key": {
              "name": "X-MICROCMS-API-KEY",
              "value": [
                "sample",
              ],
            },
          },
        },
        "method": "GET",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "json": [MockFunction spy] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": {},
            },
          ],
        },
        "ok": true,
        "status": 200,
      },
    },
  ],
}
`;

exports[`handleSubmitSearchが呼ばれたときにisLoadingがtrueになり、後でfalseになること 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "https://nits-tips.microcms.io/api/v1/blogs?orders=-publishedAt&limit=100&filters=isHidden%5Bnot_equals%5Dtrue&q=search",
      {
        "headers": Headers {
          Symbol(entries): {
            "x-microcms-api-key": {
              "name": "X-MICROCMS-API-KEY",
              "value": [
                "sample",
              ],
            },
          },
        },
        "method": "GET",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "json": [MockFunction spy] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "ok": true,
        "status": 200,
      },
    },
  ],
}
`;
